# lutis-jvm

./: .gitignore  Makefile  README.md  pom.xml
lutislib/: CMakeLists.txt
lutislib/header/: Core.h  com_wuriyanto_lab_lutisjvm_Lutis.h
lutislib/script/: imagemagick
lutislib/src/: Lutis.cc
src/main/java/com/wuriyanto/lab/lutisjvm/: App.java  IOUtil.java  Lutis.java
src/main/resources/: README.md
src/test/java/com/wuriyanto/lab/lutisjvm/: AppTest.java
testdata/: README.md
